-------------- 6/26/16 ----------------

Noclip plugin now updates client NWVar with default noclip permissions when rank changes
Removed unneeded silkicons
Fixed team plugin using a nil function
Removed unused KillSilent plugin

-------------- 6/23/16 ----------------

Ban messages and logging log the reason user was banned for
MySQL escaping, these plugins should be safe to use now
TMySQL3 doesn't fail if already initalized, "D is for Database!"

-------------- 6/21/16 ----------------

Working Beta TMySQL3 and TMySQL4 writers
Working Beta TMySQL3 and TMySQL4 banlists
Moved logging to a configurable plugin
Changed ASS_DropClient to use game.KickID
Moved banning/unbanning backend to banlist plugins
Split Alltalk and Gag/Mute plugins
Updated Alltalk/Proxvoice to not use SetGlobals as bad as DarkRP
Converted config files to use von, assmod configs are getting remade
Moved some stuff out of the default config and split it client/server
Removed a couple useless networkvars

-------------- 6/18/16 ----------------

Moved silkicons over to a workshop addon to greatly speed up resource downloads
Fixed newly created temp admin notification from displaying on all clients
Passed rank to the unused RankingChanged plugin call
Cleaned up ass_shared of unneeded code
Added checks on writers/banlists before running any hooks or requires inside of them
Fixed errors related to MySQL plugins even when not using them
Changed Client Tell varible over to net message bools instead of a GlobalBool
Join/Quit messages go through TellPlayers instead of being seperate chat.AddTexts
Switched Join/Quit logging to events
TellPlayers/LogAction functions can take a string instead of a player
Removed debug prints from banlist plugin
Added FullNickLog back into logs

-------------- 6/16/16 ----------------

Fixed writer plugin commands
Fixed writer plugin functions overwriting all other writer plugin's functions
Converted all base commands over to net message